--- a/bibliography.bib
+++ b/bibliography.bib
@@ -30,3 +30,11 @@
   url = {http://www.cs.huji.ac.il/~shais/UnderstandingMachineLearning/understanding-machine-learning-theory-algorithms.pdf}
 }
 
+@MANUAL{hdm,
+  title = {{hdm}: High-Dimensional Metrics (Vignette)},
+  author = {Victor Chernozhukov, Chris Hansen, Martin Spindler},
+  year = {2016},
+  owner = {Martin},
+  timestamp = {2016.02.16}
+}
+
