--- a/PS5.Rmd
+++ b/PS5.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(error = TRUE)
 
 
 
-```{r, include=FALSE}
+```{r, include=TRUE}
 library(MASS)
 library(gbm)
 library(mboost)
